--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.mateuszdziubek.easysearch"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
@@ -25,6 +25,11 @@ dependencies {
     testCompile 'org.mockito:mockito-all:2.0.2-beta'
     testCompile 'com.elpassion.android.commons:espresso:0.0.9'
     testCompile 'com.android.support:appcompat-v7:24.0.0'
+
+    androidTestCompile 'junit:junit:4.12'
+    androidTestCompile 'org.mockito:mockito-all:2.0.2-beta'
+    //androidTestCompile 'com.elpassion.android.commons:espresso:0.0.9'
+    //androidTestCompile 'com.android.support:appcompat-v7:24.0.0'
 
     compile 'com.android.support:appcompat-v7:24.0.0'
     compile 'com.google.code.gson:gson:2.6.2'
