--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".usersearch.UserSearchActivity">
+        <activity android:name=".usersearch.LocationSearchActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
